# Agenthesis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_test.py  flaky_api_agent.py  strict_json_extractor.py  vulnerable_support_bot.py
examples/langchain/: api_chaos_recovery_test.py  rag_hallucination_test.py  sql_injection_defense_test.py
src/agentcheck/: __init__.py  _context.py  _given.py  _testing.py  intercept.py  plugin.py  properties.py  report.py  shrink.py  types.py
src/agentcheck/integrations/: __init__.py  dspy.py  langchain.py
src/agentcheck/integrations/langchain/: __init__.py  adapter.py  callback.py  resolver.py  strategies.py
src/agentcheck/strategies/: __init__.py  tools.py
src/agenthesis/: __init__.py  _context.py  _given.py  _testing.py  intercept.py  plugin.py  properties.py  report.py  types.py
src/agenthesis/integrations/: __init__.py  dspy.py
src/agenthesis/integrations/langchain/: __init__.py  adapter.py  callback.py  resolver.py  strategies.py
src/agenthesis/strategies/: __init__.py  http.py  prompts.py
tests/: conftest.py  test_dspy.py  test_integration.py  test_intercept.py  test_langchain.py  test_langchain_adapter.py  test_langchain_resolver.py  test_langchain_strategies.py  test_plugin.py  test_properties.py  test_resolver.py  test_strategies.py  test_types.py
