[project]
name = "agentcheck"
version = "0.1.0"
description = "Property-based testing framework for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "hypothesis>=6.100.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
json = ["jsonschema>=4.20.0"]

[project.entry-points.pytest11]
agentcheck = "agentcheck.plugin"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.14.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcheck"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
